Partial_14Dec2021/force-app/main/default/objects/Claim__c/fields/City_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Name__c</fullName>
    <label>City Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>