Partial_14Dec2021/force-app/main/default/objects/Claim__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>