Partial_14Dec2021/force-app/main/default/objects/Claim__c/fields/Plumber_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Plumber_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plumber Scheme</label>
    <referenceTo>Plumber_Scheme_Relation__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>